styles.css
@import url('https://fonts.googleapis.com/css2?family=Inconsolata:wght@300;400&display=swap');

*, *::before, *::after {
  box-sizing: border-box;
  font-family: 'Inconsolata', monospace;
  font-weight: 300;
  color: #6D7587;
}

*::-moz-selection {
  background: transparent;
}
*::selection {
  background: transparent;
}

body {
  padding: 0;
  margin: 0;
  background: #EBECF0;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
  -webkit-user-select: none;
  -ms-user-select: none;
  user-select: none;
}

.calculator-grid {
  display: grid;
  justify-content: center;
  align-content: center;
  grid-gap: 16px;
  grid-template-columns: repeat(4, 96px);
  grid-template-rows: minmax(120px, auto) repeat(5, 96px);

  padding: 16px;
  border-radius: 24px 24px 50px 50px;
  background: 
    linear-gradient(317.7deg, rgba(0, 0, 0, 0.4) 0%, rgba(255, 255, 255, 0.4) 105.18%), #EBECF0;
  background-blend-mode: soft-light, normal;
  box-shadow: 8px 8px 16px #A6ABBD, -10px -10px 16px #FAFBFF;
}

.calculator-grid > button {
  cursor: pointer;
  font-size: 2rem;
  border-radius: 50%;
  border: none;
  outline: none;
  -webkit-tap-highlight-color: transparent;
  background: 
    linear-gradient(317.7deg, rgba(0, 0, 0, 0.4) 0%, rgba(255, 255, 255, 0.4) 105.18%), #EBECF0;
  background-blend-mode: soft-light, normal;
  box-shadow: 6px 6px 16px #A6ABBD, -6px -6px 16px #FAFBFF;
  display: flex;
  justify-content: center;
  align-items: center;
}

.calculator-grid > button:active {
  background: 
    linear-gradient(317.7deg, rgba(0, 0, 0, 0.4) 0%, rgba(255, 255, 255, 0.4) 105.18%), #EBECF0;
  background-blend-mode: soft-light, normal;
  border: 1px solid rgba(255, 255, 255, 0.4);
  box-sizing: border-box;
  box-shadow: inset 5px 5px 10px #A6ABBD, inset -5px -5px 10px #FAFBFF;
}

.calculator-grid > button[data-equals],
.calculator-grid > button[data-operation] {
  font-size: 2.5rem;
  font-weight: 400;
  color: #00b7c9;
}

.span-two {
  grid-column: span 2;
}

.output {
  grid-column: 1 / -1;
  display: flex;
  align-items: flex-end;
  justify-content: space-around;
  flex-direction: column;
  padding: 8px 16px;
  word-wrap: break-word;
  word-break: break-all;

  background: 
    linear-gradient(317.7deg, rgba(0, 0, 0, 0.4) 0%, rgba(255, 255, 255, 0.4) 105.18%), #EBECF0;
  background-blend-mode: soft-light, normal;
  border: 1px solid rgba(255, 255, 255, 0.4);
  box-sizing: border-box;
  box-shadow: inset 3px 3px 8px #A6ABBD, inset -3px -3px 8px #FAFBFF;
  border-radius: 16px;
}

.output .previous-operand {
  opacity: 0.6;
  font-size: 1.5rem;
}

.output .current-operand {
  font-size: 2.5rem;
}

@media only screen and (max-width: 450px) {
  .calculator-grid {
    grid-template-columns: repeat(4, 80px);
    grid-template-rows: minmax(112px, auto) repeat(5, 80px);
    background: transparent;
    box-shadow: none;
    padding: 0px;
    border-radius: none;
  }

  .output {
    min-height: 112px;
  }
}

@media only screen and (max-width: 400px) {
  .calculator-grid {
    grid-template-columns: repeat(4, 72px);
    grid-template-rows: minmax(112px, auto) repeat(5, 72px);
  }
}

@media only screen and (max-width: 350px) {
  .calculator-grid {
    grid-template-columns: repeat(4, 56px);
    grid-template-rows: minmax(112px, auto) repeat(5, 56px);
  }

  .calculator-grid > button {
    font-size: 1.7rem;
  }

  .calculator-grid > button[data-equals],
  .calculator-grid > button[data-operation] {
    font-size: 2rem;
  }

  .output {
    min-height: 96px;
  }
}

